mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ca-mongo-service
  labels:
    app: ca-mongo
spec:
  selector:
    app: ca-mongo
  ports:
    - name: ca-mongo-port-service
      port: 27017
      protocol: TCP
      targetPort: ca-mongo-port
